<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/convert_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/convert_text"
        android:textSize="28dp"
        android:textStyle="bold"
        android:textColor="#FFF"/>

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="300dp"
        android:minHeight="50dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="@drawable/btn2"
        android:padding="5dp"
        android:hint="@string/enter_text"
        android:textColorHint="#FFF"
        android:textSize="20dp"
        android:textColor="#FFF"/>

    <Button
        android:id="@+id/convert_bnt"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/edit_text"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn"
        android:layout_marginTop="30dp"
        android:text="@string/convert"
        android:textSize="17dp"
        android:textColor="#FFF"/>

</RelativeLayout>